@@ -21,3 +21,4 @@ inst/scraping_scripts
 tools/lexicon_logo/r_lexicona.png
 tools/lexicon_logo/r_lexicon.pptx
 tools/lexicon_logo/resize_icon.txt
+jockers_rinker2.R
