@@ -7,3 +7,4 @@
 .Rprofile
 .Rproj.user
 lexicon.Rproj
+jockers_rinker2.R
