@@ -28,6 +28,9 @@ BUG FIXES
 
 NEW FEATURES
 
+* `hash_sentiment_socal_google` sentiment hash table added for use in the
+  **sentimentr** package.
+
 MINOR FEATURES
 
 IMPROVEMENTS
